syntax = "proto3";

package fuwa;

option go_package = "github.com/waifu-devs/fuwa/proto";

import "types.proto";

// Message management service
service MessageService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc GetMessage(GetMessageRequest) returns (GetMessageResponse);
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);
  rpc UpdateMessage(UpdateMessageRequest) returns (UpdateMessageResponse);
  rpc DeleteMessage(DeleteMessageRequest) returns (DeleteMessageResponse);
}

// Message service request/response types
message SendMessageRequest {
  string channel_id = 1;
  string content = 2;
  repeated Attachment attachments = 3;
  repeated Embed embeds = 4;
  string reply_to_id = 5;
}

message SendMessageResponse {
  Message message = 1;
}

message GetMessageRequest {
  string message_id = 1;
}

message GetMessageResponse {
  Message message = 1;
}

message GetMessagesRequest {
  string channel_id = 1;
  int32 limit = 2;
  string before_id = 3; // For pagination
  string after_id = 4;
}

message GetMessagesResponse {
  repeated Message messages = 1;
  bool has_more = 2;
}

message UpdateMessageRequest {
  string message_id = 1;
  string content = 2;
  repeated Embed embeds = 3;
  repeated string update_mask = 4;
}

message UpdateMessageResponse {
  Message message = 1;
}

message DeleteMessageRequest {
  string message_id = 1;
}

message DeleteMessageResponse {
  bool success = 1;
}